Added research position to home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
            <div class="home-text">
             <h1>Vaughn Chambers</h1>
-            <p> I'm currently a mechanical engineering Ph.D. candidate at the University of Delaware. I am aiming to defend my dissertation in October-December of 2023 and will be looking to stay in the Delaware/Maryland/Pennsylvania area for an industry position (open to remote work).
+            <p> I'm currently a mechanical engineering Ph.D. candidate at the University of Delaware. I am aiming to defend my dissertation in October-December of 2023 and will be looking to stay in the Delaware/Maryland/Pennsylvania area for an industry or research position (open to remote work).
             <br><br>
             While my current position is in a robotics and control lab, I also have experience in many other areas of mechanical and biomedical engineering. My true interests are problem-solving, taking on new challenges, and doing honest, hard work. Check out what I've worked on in the past, and feel free to send me an email using the link at the bottom of the page.  </p>
            </div> 
