Updated Lecturer Tile On Experience Page

--- a/experience.html
+++ b/experience.html
@@ -112,11 +112,11 @@
               </div>                             
               <div class="card-shadow">
                    <div class="card"><a class="card-link" href="sub_Lecturer.html">
-                       <div class="card-image-container" id="MU-container">
-                       <img class="card-image" id="GL-image" src="src/Images/MU.webp" alt="Messiah University Image"/>
+                       <div class="card-image-container" id="UD-container">
+                       <img class="card-image" id="TA-image" src="src/Images/UD.webp" alt="University of Delaware Image"/>
                        </div>
-                       <div class="card-title">Guest Lecturer</div>
-                       <div class="card-subtext">2020-2021</div>
+                       <div class="card-title">Lecturer</div>
+                       <div class="card-subtext">2020-Present</div>
                    </a></div>
               </div>
               <div class="card-shadow">
