Added Dribbble Link to text

--- a/sub_GraphicHobby.html
+++ b/sub_GraphicHobby.html
@@ -27,7 +27,7 @@
             <br>
             
             <pc>
-            While I have done <a class="text-link" href="sub_Graphic.html">graphic design professionally,</a> it started as a hobby and remains one. When attending Messiah University, I started to learn how to use Adobe Illustrator and Photoshop to help with graphics and charts for classes and presentations and suddenly became very interested in graphic design and art. It quickly became one of my favorite things to do in my free time. I've spent most of my time designing logos for fake companies, making gifts for family and friends, and drawing Pokémon. Check out my Dribbble page by clicking on the link (basketball) at the bottom of the page for a more comprehensive portfolio. 
+            While I have done <a class="text-link" href="sub_Graphic.html">graphic design professionally,</a> it started as a hobby and remains one. When attending Messiah University, I started to learn how to use Adobe Illustrator and Photoshop to help with graphics and charts for classes and presentations and suddenly became very interested in graphic design and art. It quickly became one of my favorite things to do in my free time. I've spent most of my time designing logos for fake companies, making gifts for family and friends, and drawing Pokémon. Check out my <a class="text-link" href="https://dribbble.com/VaughnChambers" target="_blank" rel="noopener noreferrer">Dribbble page</a> for a more comprehensive portfolio. 
             
             <br><br>
             <div class="content-image-container">
